# FinAgent-Autonomous-Financial-Research-System

./: .env.example  .gitignore  CHANGES.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: test.yml
backend/: Dockerfile  main.py  requirements.txt
backend/agent/: orchestrator.py
backend/agent/mcp_servers/: news_server.py  strategy_server.py
backend/agent/specialist_agents/: __init__.py  risk_agent.py  sec_agent.py  shared_state.py  synthesis_agent.py  technical_agent.py
backend/agent/tools/: backtest.py  news_scraper.py  sentiment.py
backend/rag/: retriever.py  vectordb.py
backend/utils/: config.py  logger.py  observability.py
frontend/: index.html  tailwind.config.js  vite.config.js
frontend/src/: index.css
frontend/src/components/: ResultsDisplay.jsx  WorkflowRunner.jsx
frontend/src/pages/: Dashboard.jsx
strategy_engine/: backtest.cpp
tests/: conftest.py  test_fallbacks.py
